SFDEV/force-app/main/default/objects/Employee__c/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Department of Employee</description>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>