SFDEV/force-app/main/default/objects/Employee__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Email Id of the Employee</description>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>