SFDEV/force-app/main/default/objects/Employee__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last name of the employee</description>
    <label>LastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>